Enhance TTS functionality and configuration
- Added support for the Dia TTS model, including integration in the TextToSpeech class and factory.
- Updated file naming conventions for generated transcripts and audio files to include podcast name and timestamp.
- Modified audio mixing logic in AudioMixer to improve overlap handling.
- Added Replicate API token to configuration management.
- Removed unused audio asset: settled_vitals_transition.mp3.
- Updated frontend to include Dia as a TTS option.

--- a/podcastfy/frontend/index.html
+++ b/podcastfy/frontend/index.html
@@ -118,6 +118,7 @@
                 <option value="openai">OpenAI</option>
                 <option value="edge">Edge</option>
                 <option value="gemini">Gemini</option>
+                <option value="dia">Dia (2-Party Dialogue)</option>
             </select>
             
             <label for="creativity">Creativity (0.0 - 1.0):</label>
