--- a/podcastfy/frontend/index.html
+++ b/podcastfy/frontend/index.html
@@ -219,6 +219,7 @@
                     tts_model: document.getElementById('tts-model').value,
                     creativity: parseFloat(document.getElementById('creativity').value),
                     is_long_form: document.getElementById('is-long-form').checked,
+                    llm_model_name: "gpt-4",
                     text: `
                         Introduction:
                         ${document.getElementById('introduction').value}
