--- a/podcastfy/frontend/index.html
+++ b/podcastfy/frontend/index.html
@@ -167,7 +167,9 @@
         }
 
         // Get the current domain
-        const API_BASE_URL = window.location.origin;
+        const API_BASE_URL = window.location.hostname === 'localhost' 
+            ? 'http://localhost:8080'  // Local development
+            : window.location.origin;  // Production (Railway)
 
         // Test API connection
         async function testApiConnection() {
@@ -312,4 +314,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
